---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis

---------------------------
  Jackdmp changes log
---------------------------

2009-10-15 Stephane Letz  <letz@grame.fr>

	* Change CoreAudio notification thread setup for OSX Snow Leopard.

2009-09-18 Stephane Letz  <letz@grame.fr>

	* Simplify transport in NetJack2: master only can control transport.

2009-09-15 Stephane Letz  <letz@grame.fr>

	* Correct CPU timing in JackNetDriver, now take cycle begin time after Read.
	* Fix issues in JackNetDriver::DecodeTransportData and JackNetDriver::Initialize.

2009-08-28 Stephane Letz  <letz@grame.fr>

	* Correct monitor port naming in JackAudioDriver and JackCoreAudioDriver.
	* Big endian bug fix in memops.c (http://bugs.debian.org/cgi-bin/bugreport.cgi?msg=5;filename=11_be24bit.patch;att=1;bug=486308)

2009-07-31 Stephane Letz  <letz@grame.fr>

	* Use SNDCTL_DSP_SYNCGROUP/SNDCTL_DSP_SYNCSTART API to synchronize input and output in Solaris boomer backend.

2009-07-29 Stephane Letz  <letz@grame.fr>

	* Add a -G parameter in CoreAudio backend (the computation value in RT thread expressed as percent of period).

2009-07-28 Stephane Letz  <letz@grame.fr>

	* Fix CopyAndConvertIn for Solaris backends.

2009-07-22 Stephane Letz  <letz@grame.fr>

	* Version 1.9.4 started.
	* Solaris boomer backend now working in capture or playback only mode.
	* Fix control.h for proper compilation on Solaris.

2009-07-17 Stephane Letz  <letz@grame.fr>

	* Loopback backend reborn as a dynamically loadable separated backend.
	* -L parameter for loopback backend activated again in jackd.

2009-07-17 Stephane Letz  <letz@grame.fr>

	* Big rewrite of Solaris boomer driver, seems to work in duplex mode at least.
