@@ -28,6 +28,7 @@ static char* server_name = NULL;
 namespace Jack
 {
 
+bool JackServerGlobals::fKilled = false;
 JackServer* JackServerGlobals::fInstance; 
 unsigned int JackServerGlobals::fUserCount;
 bool (* JackServerGlobals::on_device_acquire)(const char * device_name) = NULL;
