@@ -24,6 +24,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 #include "JackServer.h"
 #include "JackLockedEngine.h"
 #include "JackNotification.h"
+#include "JackServerGlobals.h"
 
 using namespace std;
 
@@ -137,6 +138,10 @@ boolean_t JackMachServerChannel::MessageHandler(mach_msg_header_t* Request, mach
         channel->ClientKill(Request->msgh_local_port);
     } else {
         JackRPCEngine_server(Request, Reply);
+        // Issued by JackEngine::ReleaseRefnum when temporary mode is used
+        if (JackServerGlobals::fKilled) {
+            kill(JackTools::GetPID(), SIGINT);
+        }
     }
     return true;
 }
